force-app/main/objects/System__c.object
<CustomObject>
    <description>For customer systems to be logged for external clients</description>
    <fields>
        <fullName>ATS__c</fullName>
        <description>ATS System</description>
        <label>ATS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>!Trak-It Applicant – Applicant Tracking Software</fullName>
                </value>
                <value>
                    <fullName>AbsoluteHire</fullName>
                </value>
                <value>
                    <fullName>Acclaim</fullName>
                </value>
                <value>
                    <fullName>Agile 1</fullName>
                </value>
                <value>
                    <fullName>Alchemus</fullName>
                </value>
                <value>
                    <fullName>Applicant Tracker</fullName>
                </value>
                <value>
                    <fullName>Applicant Tracking</fullName>
                </value>
                <value>
                    <fullName>Apply2Jobs</fullName>
                </value>
                <value>
                    <fullName>Arithon</fullName>
                </value>
                <value>
                    <fullName>askSam</fullName>
                </value>
                <value>
                    <fullName>Aspirant</fullName>
                </value>
                <value>
                    <fullName>Authoria</fullName>
                </value>
                <value>
                    <fullName>Automated Business Designs</fullName>
                </value>
                <value>
                    <fullName>Berkshire Associates Inc.</fullName>
                </value>
                <value>
                    <fullName>Bond StarSearcher</fullName>
                </value>
                <value>
                    <fullName>Brightmove</fullName>
                </value>
                <value>
                    <fullName>Bullhorn Staffing Software</fullName>
                </value>
                <value>
                    <fullName>Candidate Manager</fullName>
                </value>
                <value>
                    <fullName>CATS</fullName>
                </value>
                <value>
                    <fullName>Ceridian</fullName>
                </value>
                <value>
                    <fullName>CIM - AIMS</fullName>
                </value>
                <value>
                    <fullName>Conrep</fullName>
                </value>
                <value>
                    <fullName>CVManager</fullName>
                </value>
                <value>
                    <fullName>CVTracer</fullName>
                </value>
                <value>
                    <fullName>EmpXTrack</fullName>
                </value>
                <value>
                    <fullName>FlashRecruit</fullName>
                </value>
                <value>
                    <fullName>Genesys</fullName>
                </value>
                <value>
                    <fullName>Gopher</fullName>
                </value>
                <value>
                    <fullName>Greentree Systems</fullName>
                </value>
                <value>
                    <fullName>HealthcareSource - Position Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Systems</relationshipLabel>
        <relationshipName>Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <formula>TEXT(Account__r.BU__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checked_And_Released__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checked And Released</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Systems1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNumber__c</fullName>
        <formula>Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Number__c</fullName>
        <formula>Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Upgraded__c</fullName>
        <label>Date Upgraded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Live_Date__c</fullName>
        <label>Estimated Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integrated__c</fullName>
        <label>Integrated?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No – Future Int. Possible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration Certified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Notes__c</fullName>
        <description>Integration Notes</description>
        <inlineHelpText>Enter any Integration Notes</inlineHelpText>
        <label>Integration Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integrator_Account_Account_Name__c</fullName>
        <label>ATS/HRIS Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ullix</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Cornerstone OnDemand</fullName>
                </value>
                <value>
                    <fullName>Greenhouse</fullName>
                </value>
                <value>
                    <fullName>GTI Online Solutions</fullName>
                </value>
                <value>
                    <fullName>iCIMS</fullName>
                </value>
                <value>
                    <fullName>Infinite</fullName>
                </value>
                <value>
                    <fullName>Oracle Corp</fullName>
                </value>
                <value>
                    <fullName>Peoplefluent</fullName>
                </value>
                <value>
                    <fullName>PeopleScout</fullName>
                </value>
                <value>
                    <fullName>Personnel Decisions International</fullName>
                </value>
                <value>
                    <fullName>SilkRoad Technology</fullName>
                </value>
                <value>
                    <fullName>Talentsoft</fullName>
                </value>
                <value>
                    <fullName>The Right Thing</fullName>
                </value>
                <value>
                    <fullName>Workday</fullName>
                </value>
                <value>
                    <fullName>Oleeo</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Neogov</fullName>
                </value>
                <value>
                    <fullName>Clients Own Integration</fullName>
                </value>
                <value>
                    <fullName>Moka Technology Company</fullName>
                </value>
                <value>
                    <fullName>Ceridian Dayforce</fullName>
                </value>
                <value>
                    <fullName>HRDA system</fullName>
                </value>
                <value>
                    <fullName>Avature</fullName>
                </value>
                <value>
                    <fullName>Beisen</fullName>
                </value>
                <value>
                    <fullName>ASK Form</fullName>
                </value>
                <value>
                    <fullName>Springboard</fullName>
                </value>
                <value>
                    <fullName>Jobvite</fullName>
                    <label>JobVite</label>
                </value>
                <value>
                    <fullName>Avionte</fullName>
                </value>
                <value>
                    <fullName>SHEIN (HR System) (Self-developed)</fullName>
                </value>
                <value>
                    <fullName>SKS (HR Systems)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrator_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please ensure you choose an account with (Alliance) in the account name.</inlineHelpText>
        <label>Integrator Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Systems (Integrator Account)</relationshipLabel>
        <relationshipName>Systems1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integrator_Platform__c</fullName>
        <label>Integration Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Integrator_Account_Account_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Virtual Edge</fullName>
                </value>
                <value>
                    <fullName>Recruiting Manager</fullName>
                </value>
                <value>
                    <fullName>Hodes IQ</fullName>
                </value>
                <value>
                    <fullName>Pointer</fullName>
                </value>
                <value>
                    <fullName>Pangea</fullName>
                </value>
                <value>
                    <fullName>GTI</fullName>
                </value>
                <value>
                    <fullName>VNext</fullName>
                </value>
                <value>
                    <fullName>BrassRing</fullName>
                </value>
                <value>
                    <fullName>RecruitActive</fullName>
                </value>
                <value>
                    <fullName>IGRasp</fullName>
                </value>
                <value>
                    <fullName>Easycruit</fullName>
                </value>
                <value>
                    <fullName>Talentlink</fullName>
                </value>
                <value>
                    <fullName>Networx</fullName>
                </value>
                <value>
                    <fullName>Taleo EE</fullName>
                </value>
                <value>
                    <fullName>Taleo BE</fullName>
                </value>
                <value>
                    <fullName>Vurv Technology</fullName>
                </value>
                <value>
                    <fullName>Jobpartners</fullName>
                </value>
                <value>
                    <fullName>PeopleSoft</fullName>
                </value>
                <value>
                    <fullName>eRecruit</fullName>
                </value>
                <value>
                    <fullName>Webcruiter</fullName>
                </value>
                <value>
                    <fullName>Peoplefluent</fullName>
                </value>
                <value>
                    <fullName>Colossus</fullName>
                </value>
                <value>
                    <fullName>PeopleClick</fullName>
                </value>
                <value>
                    <fullName>PeopleScout</fullName>
                </value>
                <value>
                    <fullName>PDI</fullName>
                </value>
                <value>
                    <fullName>Silkroad</fullName>
                </value>
                <value>
                    <fullName>SilkRoad Techno</fullName>
                </value>
                <value>
                    <fullName>via HRNX</fullName>
                </value>
                <value>
                    <fullName>Amris</fullName>
                </value>
                <value>
                    <fullName>uVox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client&apos;s Local HR System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Client_System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is meant for specifying whether a System is a client system or not.</description>
        <inlineHelpText>Tick this box if the System is a Client System.</inlineHelpText>
        <label>Is Client System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMS__c</fullName>
        <description>Learning Management System</description>
        <label>LMS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authoria</fullName>
                </value>
                <value>
                    <fullName>Cornerstone Ondemand</fullName>
                </value>
                <value>
                    <fullName>geo</fullName>
                </value>
                <value>
                    <fullName>Internally Built</fullName>
                </value>
                <value>
                    <fullName>KMSI</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Plateau</fullName>
                </value>
                <value>
                    <fullName>SABA</fullName>
                </value>
                <value>
                    <fullName>SumTotal</fullName>
                </value>
                <value>
                    <fullName>Ultipro</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>viDesktop</fullName>
                </value>
                <value>
                    <fullName>WingSpan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Linked_system_for_Transition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked system for Transition</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>System__c.System_Type__c</field>
                <operation>equals</operation>
                <value>Talent Central</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>System__c</referenceTo>
        <relationshipLabel>Systems</relationshipLabel>
        <relationshipName>Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_of_Users_Projects_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>List of Users/Projects Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Live_Date__c</fullName>
        <label>Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MFS_Version__c</fullName>
        <label>MFS Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Transition_Spreadsheet_collated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master Transition Spreadsheet collated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Systems</relationshipLabel>
        <relationshipName>Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMS__c</fullName>
        <description>Performance Management System</description>
        <label>PMS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cornerstone Ondemand</fullName>
                </value>
                <value>
                    <fullName>Internally Built</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PeopleSoft</fullName>
                </value>
                <value>
                    <fullName>SuccessFactors</fullName>
                </value>
                <value>
                    <fullName>Taleo</fullName>
                </value>
                <value>
                    <fullName>Ultipro</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>viDesktop</fullName>
                </value>
                <value>
                    <fullName>WingSpan</fullName>
                </value>
                <value>
                    <fullName>Workscape</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In arrears</fullName>
                </value>
                <value>
                    <fullName>In advance</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Hire__c</fullName>
        <description>Select Post-hire solutions such as 360, succession planning, leadership development, employee development, competency modeling etc</description>
        <label>Post-Hire</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AON</fullName>
                </value>
                <value>
                    <fullName>Assess (Bigby)</fullName>
                </value>
                <value>
                    <fullName>Caliper</fullName>
                </value>
                <value>
                    <fullName>DDI</fullName>
                </value>
                <value>
                    <fullName>Evolv</fullName>
                </value>
                <value>
                    <fullName>First Advantage</fullName>
                </value>
                <value>
                    <fullName>Hogan</fullName>
                </value>
                <value>
                    <fullName>Internally Developed</fullName>
                </value>
                <value>
                    <fullName>Kenexa</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>pan</fullName>
                </value>
                <value>
                    <fullName>PeopleAnswers</fullName>
                </value>
                <value>
                    <fullName>PreVisor</fullName>
                </value>
                <value>
                    <fullName>Profiles</fullName>
                </value>
                <value>
                    <fullName>PSI</fullName>
                </value>
                <value>
                    <fullName>SHL</fullName>
                </value>
                <value>
                    <fullName>Unicru</fullName>
                </value>
                <value>
                    <fullName>Valtera</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Hire__c</fullName>
        <description>Select the Pre-Hire Solutions used</description>
        <label>Pre-Hire</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AON</fullName>
                </value>
                <value>
                    <fullName>Assess (Bigby)</fullName>
                </value>
                <value>
                    <fullName>Caliper</fullName>
                </value>
                <value>
                    <fullName>Corvirtus</fullName>
                </value>
                <value>
                    <fullName>DDI</fullName>
                </value>
                <value>
                    <fullName>Disc</fullName>
                </value>
                <value>
                    <fullName>Employment Inventory</fullName>
                </value>
                <value>
                    <fullName>ETC</fullName>
                </value>
                <value>
                    <fullName>Evolv</fullName>
                </value>
                <value>
                    <fullName>First Advantage</fullName>
                </value>
                <value>
                    <fullName>Hartman Profile</fullName>
                </value>
                <value>
                    <fullName>Hogan</fullName>
                </value>
                <value>
                    <fullName>HRChally</fullName>
                </value>
                <value>
                    <fullName>Internally Developed</fullName>
                </value>
                <value>
                    <fullName>Kenexa</fullName>
                </value>
                <value>
                    <fullName>LOMA</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Omnia</fullName>
                </value>
                <value>
                    <fullName>OPAC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>pan</fullName>
                </value>
                <value>
                    <fullName>PeopleAnswers</fullName>
                </value>
                <value>
                    <fullName>Pradco</fullName>
                </value>
                <value>
                    <fullName>PreVisor</fullName>
                </value>
                <value>
                    <fullName>Profiles</fullName>
                </value>
                <value>
                    <fullName>PSI</fullName>
                </value>
                <value>
                    <fullName>PsyMax</fullName>
                </value>
                <value>
                    <fullName>Shaker Consulting</fullName>
                </value>
                <value>
                    <fullName>SHL</fullName>
                </value>
                <value>
                    <fullName>Talent Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previsor_Migration_Date__c</fullName>
        <label>Previsor Migration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Previsor_SFDC_Id__c</fullName>
        <description>This field is used to store the Previsor SFDC ID of the System</description>
        <label>Previsor SFDC Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Systems</relationshipLabel>
        <relationshipName>Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projects_migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Projects migrated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SODA_DR__c</fullName>
        <label>SODA DR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                    <default>true</default>
                    <label>2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSO_Enabled__c</fullName>
        <label>SSO Enabled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Statement_of_Account_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Statement of Account email sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of System</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Technographic_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>TALENT MANAGEMENT SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>ACCOUNTING &amp; FINANCE SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>BENEFITS ADMINISTRATION SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>CORE HR SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>EMPLOYEE SCHEDULING SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>FREELANCE PLATFORMS</fullName>
                </value>
                <value>
                    <fullName>HR ANALYTICS SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>HR MANAGEMENT SUITES SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>HR SYSTEMS</fullName>
                </value>
                <value>
                    <fullName>LEARNING MANAGEMENT SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>MULTI-COUNTRY PAYROLL SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>OTHER HR SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>PERFORMANCE MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>STAFFING SHORTAGE</fullName>
                </value>
                <value>
                    <fullName>WORKFORCE MANAGEMENT SOFTWARE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Classification__c</fullName>
        <label>System Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External Company (Direct)</fullName>
                </value>
                <value>
                    <fullName>External Company (Integrated)</fullName>
                </value>
                <value>
                    <fullName>Piped Company</fullName>
                </value>
                <value>
                    <fullName>Internal Testing Company</fullName>
                </value>
                <value>
                    <fullName>Client Demo Company</fullName>
                </value>
                <value>
                    <fullName>SHL Shared Demo Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Client_ID__c</fullName>
        <label>System Client ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Client_Name__c</fullName>
        <label>System Client Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Creation_requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Creation requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <description>This field is meant for storing the name of the System</description>
        <inlineHelpText>Specify the Unique Name of the System</inlineHelpText>
        <label>System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Transition_Status__c</fullName>
        <label>System Transition Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not transitioned</fullName>
                </value>
                <value>
                    <fullName>Partially Transitioned</fullName>
                </value>
                <value>
                    <fullName>Fully Transitioned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>